Edit `Caring for Core` to `@hodlinator`
for clarity on grant renewal

--- a/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
@@ -28,7 +28,7 @@ Grant renewals:
 
 - [ASmap](/blog/bitcoin-grants-september-2024-7th-wave#asmap)
 - [Blitz Wallet](/blog/bitcoin-grants-july-2024-6th-wave#blitz-wallet)
-- [Caring for Core](/blog/caring-for-bitcoin-core#hodlinator)
+- [@hodlinator](/blog/caring-for-bitcoin-core#hodlinator)
 
 Each project addresses a specific need—from drop-in Tor libraries and Silent
 Payments coordination to sat-sized, account-free Lightning paywalls, hardened
