Reword "paywall" mention

--- a/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
@@ -126,7 +126,7 @@ License: MIT
 ### ngx_L402
 
 The `ngx_L402` project is a lightweight [NGINX](https://nginx.org) module that
-brings Lightning-powered paywalls straight into the web-server layer. Written in
+brings bitcoin-based payments directly to the web server. Written in
 Rust and delivered as a native plug-in, it enforces the [L402 authentication
 standard](https://github.com/lightninglabs/L402) from Lightning Labs and also
 accepts [Cashu](https://cashu.space/) tokens for e-cash redemptions. By moving
