Reword "paywall" mention

--- a/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
@@ -31,8 +31,9 @@ Grant renewals:
 - [@hodlinator](/blog/caring-for-bitcoin-core#hodlinator)
 
 Each project addresses a specific need—from drop-in Tor libraries and Silent
-Payments coordination to sat-sized, account-free Lightning paywalls, hardened
-live-OS builds, and merchant-ready e-cash wallets—strengthening privacy and
+Payments coordination to hardened live-OS builds,
+Nginx modules that allow for seamless monetization, and
+merchant-ready e-cash wallets—strengthening privacy and
 usability across the stack.
 
 The ability to support these projects is made possible by the generosity of our
