--- a/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
+++ b/data/blog/thirteenth-wave-of-bitcoin-grants.mdx
@@ -57,7 +57,6 @@ Android, JVM, Kotlin/Native (Linux, macOS, iOS), and Node developers integrate
 [Tor](/blog/tor-receives-support-grant) directly into their applications. The
 project handles Tor's event loop and packaging complexities, providing projects
 like [Sparrow Wallet](https://sparrowwallet.com),
-[Samourai](https://github.com/Samourai-Wallet),
 [BitBanana](https://bitbanana.app), and [Sphinx Chat](https://sphinx.chat) with
 a single dependency for privacy‑preserving network connectivity. For instance,
 Sparrow upgraded to Tor
@@ -190,7 +189,7 @@ From reproducible Tor binaries and live-OS hardening to Silent Payments
 stewardship and rigorous Core review, this thirteenth wave strengthens Bitcoin's
 technical foundation and broadens user choice.
 
-Every grant application has passes a [mission-aligned](/mission) review process.
+Every grant application goes through a [mission-aligned](/mission) review process.
 If you're building free and open-source Bitcoin software that advances
 decentralization and user sovereignty, we invite you to [apply for
 funding](/apply).
