feat: remove zaprite API call and related UI elements

--- a/data/funds/nostr.mdx
+++ b/data/funds/nostr.mdx
@@ -8,7 +8,7 @@ coverImage: '/static/images/projects/nostr.png'
 git: 'https://github.com/OpenSats'
 twitter: 'opensats'
 nostr: 'npub10pensatlcfwktnvjjw2dtem38n6rvw8g6fv73h84cuacxn4c28eqyfn34f'
-
+zaprite: 'OoYtzNjilW1NRtDsxLAj'
 btcpay: 'nostr'
 store: 'FTJT37saZKH96U6RjekQtueMBKzYajzEWLDjpTAY7QUw'
 tags: ['OpenSats', 'Fund']
