Fix Niel references: keep text but remove broken links

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -320,6 +320,7 @@ In addition to the above grants we helped launch the [Nostr
 Design](https://nostrdesign.org/) initiative spearheaded by
 [Karnage](/about/karnage),
 [Daniele](/about/dtonon), and
+Niel.
 
 If you’re looking for design feedback or help, reach out to us or use the
 [#nostrdesign](https://nostr.band/?q=%23nostrdesign) hashtag.
