--- a/data/pages/nostr.mdx
+++ b/data/pages/nostr.mdx
@@ -43,7 +43,9 @@ actively involved in the design of major clients, most notably Gossip and
 Coracle, as well as various tools such as the static content gateway that is
 part of *nostr.com*.
 
-
+The third one is Niel, who is an Industrial Designer who is now bringing his
+years of making beautiful and convincing presentations for his designs to the
+world of nostr UI & UX.
 
 ## Need Help?
 
