Remove Karnage and Ace about pages and clean up broken links

--- a/data/blog/2023-year-in-review.mdx
+++ b/data/blog/2023-year-in-review.mdx
@@ -318,7 +318,7 @@ Machine Framework.
 
 In addition to the above grants we helped launch the [Nostr
 Design](https://nostrdesign.org/) initiative spearheaded by
-[Karnage](/about/karnage),
+Karnage,
 [Daniele](/about/dtonon), and
 Niel.
 
