Fix broken Karnage link in announcing-nostr-design blog post

--- a/data/blog/announcing-nostr-design.mdx
+++ b/data/blog/announcing-nostr-design.mdx
@@ -32,7 +32,7 @@ second opinion on client UI/UX choices), don't be shy and reach out to us!
 
 ## Who is "us"?
 
-We are [@dtonon][dtonon] and yours truly [@karnage][karnage] 🙇‍♂️ 
+We are [@dtonon][dtonon] and yours truly Karnage 🙇‍♂️ 
 
 You can find us on nostr or email us at design@opensats.org
 
