fix: change author from 'karnage' to 'default' in nostr design blog post
- Update author attribution in announcing-nostr-design.mdx
- Change from specific author 'karnage' to generic 'default' author
- Part of removing specific author references

--- a/data/blog/announcing-nostr-design.mdx
+++ b/data/blog/announcing-nostr-design.mdx
@@ -3,7 +3,7 @@ title: "Take Nostr Mainstream with Help from Nostr Design"
 date: '2023-09-09'
 tags: ['OpenSats', 'nostr', 'design']
 draft: false
-authors: ['karnage']
+authors: ['default']
 images: ['/static/images/blog/08-nostr-design.jpg']
 summary: "OpenSats is proud to present the Nostr Design initiative, spearheaded by Karnage and Daniele."
 ---
