docs: move border crossings FAQ to more appropriate location
- Relocate border crossings question from end to after legal/accounting section
- Better groups practical operational concerns together
- Maintains logical flow of FAQ structure

--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -25,6 +25,7 @@ changes so that you can continue building under sustainable conditions.
 - [Can the grant be received as a company, trust, LLC, or similar?](#can-the-grant-be-received-as-a-company-trust-llc-or-similar)
 - [Why do you require tax information from your grantees?](#why-do-you-require-tax-information-from-your-grantees)
 - [Can OpenSats help me with an accounting or legal question?](#can-opensats-help-me-with-an-accounting-or-legal-question)
+- [Do you have guidance for border crossings?](#do-you-have-guidance-for-border-crossings)
 - [Can OpenSats help me to set up an organization or foundation for my open-source project?](#can-opensats-help-me-to-set-up-an-organization-or-foundation-for-my-open-source-project)
 - [What are the requirements of my grant?](#what-are-the-requirements-of-my-grant)
 - [What does it mean to produce work under a free and open-source license?](#what-does-it-mean-to-produce-work-under-a-free-and-open-source-license)
@@ -44,7 +45,6 @@ changes so that you can continue building under sustainable conditions.
 - [Can grants be part-time or only full-time?](#can-grants-be-part-time-or-only-full-time)
 - [Can a full-time grant be turned into a part-time grant?](#can-a-full-time-grant-be-turned-into-a-part-time-grant)
 - [What should I do at the end of my grant?](#what-should-i-do-at-the-end-of-my-grant)
- - [Do you have guidance for border crossings?](#do-you-have-guidance-for-border-crossings)
 
 ### I have a question; whom should I email?
 
@@ -81,6 +81,16 @@ We have hundreds of grantees across the globe and do not have the capacity or
 the liberty to provide accounting or legal advice across so many different
 jurisdictions. We recommend asking a local accountant or lawyer in your
 jurisdiction.
+
+### Do you have guidance for border crossings?
+
+We can't provide legal advice, but several resources offer practical tips for traveling with devices and data:
+
+- [EFF Border Search Pocket Guide](https://www.eff.org/document/eff-border-search-pocket-guide)
+- [On border crossings and devices (nostr post)](https://njump.me/nevent1qqs82d0ywjfc6g8y6hqledpnac5jlnvjmjl4p34hcvg5hwvsz0vj7fqpzdmhxue69uhhwmm59e6hg7r09ehkuef0qgsrhfhexcslfawgj0du2aqhmsngud4kzmga7r4pu8lmmyg3kjy6zhcrqsqqqqqpxdzve9)
+- [GrapheneOS guidance on border crossings (nostr)](https://nostr.at/nevent1qqsfdvew2fde7lm6tkfqz5m43xxugr998sxe7tfqchfv59uf2yehh3cppamhxue69uhkummnw3ezumt0d5pzps26tfjesmn6ksf5mm36hpf9fkjut49sfeutfutvs2phrykn25v9w093g5)
+
+Consider minimizing sensitive data you carry, using full-disk encryption, and having a plan for device access requests according to your jurisdiction.
 
 ### Can OpenSats help me to set up an organization or foundation for my open-source project?
 
@@ -265,16 +275,6 @@ smaller time commitment.
 Send in your final progress report.
 
 ---
-
-### Do you have guidance for border crossings?
-
-We can’t provide legal advice, but several resources offer practical tips for traveling with devices and data:
-
-- [EFF Border Search Pocket Guide](https://www.eff.org/document/eff-border-search-pocket-guide)
-- [On border crossings and devices (nostr post)](https://njump.me/nevent1qqs82d0ywjfc6g8y6hqledpnac5jlnvjmjl4p34hcvg5hwvsz0vj7fqpzdmhxue69uhhwmm59e6hg7r09ehkuef0qgsrhfhexcslfawgj0du2aqhmsngud4kzmga7r4pu8lmmyg3kjy6zhcrqsqqqqqpxdzve9)
-- [GrapheneOS guidance on border crossings (nostr)](https://nostr.at/nevent1qqsfdvew2fde7lm6tkfqz5m43xxugr998sxe7tfqchfv59uf2yehh3cppamhxue69uhkummnw3ezumt0d5pzps26tfjesmn6ksf5mm36hpf9fkjut49sfeutfutvs2phrykn25v9w093g5)
-
-Consider minimizing sensitive data you carry, using full-disk encryption, and having a plan for device access requests according to your jurisdiction.
 
 We hope the above is helpful. Make sure to have a look at our [General
 FAQ](/faq) too, as well as our [application](/apply#criteria) and [selection
