--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -87,8 +87,8 @@ jurisdiction.
 We can't provide legal advice, but several resources offer practical tips for traveling with devices and data:
 
 - [EFF Border Search Pocket Guide](https://www.eff.org/document/eff-border-search-pocket-guide)
-- [On border crossings and devices (nostr post)](https://njump.me/nevent1qqs82d0ywjfc6g8y6hqledpnac5jlnvjmjl4p34hcvg5hwvsz0vj7fqpzdmhxue69uhhwmm59e6hg7r09ehkuef0qgsrhfhexcslfawgj0du2aqhmsngud4kzmga7r4pu8lmmyg3kjy6zhcrqsqqqqqpxdzve9)
-- [GrapheneOS guidance on border crossings (nostr)](https://nostr.at/nevent1qqsfdvew2fde7lm6tkfqz5m43xxugr998sxe7tfqchfv59uf2yehh3cppamhxue69uhkummnw3ezumt0d5pzps26tfjesmn6ksf5mm36hpf9fkjut49sfeutfutvs2phrykn25v9w093g5)
+- [On border crossings and devices](https://njump.me/nevent1qqs82d0ywjfc6g8y6hqledpnac5jlnvjmjl4p34hcvg5hwvsz0vj7fqpzdmhxue69uhhwmm59e6hg7r09ehkuef0qgsrhfhexcslfawgj0du2aqhmsngud4kzmga7r4pu8lmmyg3kjy6zhcrqsqqqqqpxdzve9)
+- [GrapheneOS guidance on border crossings](https://nostr.at/nevent1qqsfdvew2fde7lm6tkfqz5m43xxugr998sxe7tfqchfv59uf2yehh3cppamhxue69uhkummnw3ezumt0d5pzps26tfjesmn6ksf5mm36hpf9fkjut49sfeutfutvs2phrykn25v9w093g5)
 
 Consider minimizing sensitive data you carry, using full-disk encryption, and having a plan for device access requests according to your jurisdiction.
 
