--- a/data/pages/faq-grantees.mdx
+++ b/data/pages/faq-grantees.mdx
@@ -85,14 +85,13 @@ jurisdiction.
 ### Do you have guidance for border crossings?
 
 We can't provide legal advice, but several resources offer practical tips for
-traveling with devices and data. The [EFF Border Search Pocket
-Guide](https://www.eff.org/document/eff-border-search-pocket-guide) provides
-comprehensive guidance, while [articles on border crossings and
-devices](https://njump.me/nevent1qqs82d0ywjfc6g8y6hqledpnac5jlnvjmjl4p34hcvg5hwvsz0vj7fqpzdmhxue69uhhwmm59e6hg7r09ehkuef0qgsrhfhexcslfawgj0du2aqhmsngud4kzmga7r4pu8lmmyg3kjy6zhcrqsqqqqqpxdzve9)
+traveling with devices and data: the [EFF Border Search Pocket
+Guide](https://www.eff.org/document/eff-border-search-pocket-guide), [articles on border crossings and
+devices](https://njump.me/nevent1qqs82d0ywjfc6g8y6hqledpnac5jlnvjmjl4p34hcvg5hwvsz0vj7fqpzdmhxue69uhhwmm59e6hg7r09ehkuef0qgsrhfhexcslfawgj0du2aqhmsngud4kzmga7r4pu8lmmyg3kjy6zhcrqsqqqqqpxdzve9),
 and [GrapheneOS guidance on border
-crossings](https://nostr.at/nevent1qqsfdvew2fde7lm6tkfqz5m43xxugr998sxe7tfqchfv59uf2yehh3cppamhxue69uhkummnw3ezumt0d5pzps26tfjesmn6ksf5mm36hpf9fkjut49sfeutfutvs2phrykn25v9w093g5)
-offer additional perspectives. Enabling [Lockdown Mode](https://nostr.at/nevent1qqsdzfkq87ux5utdq8zgcnexghnj5h27zn55j7d588vunp3rths09qszypsf7xrv5q3avkxqlcqe2uz89av4vhytu8wpvwc4g8avnkg25n5279vk3h3)
-or similar security features is advisable.
+crossings](https://nostr.at/nevent1qqsfdvew2fde7lm6tkfqz5m43xxugr998sxe7tfqchfv59uf2yehh3cppamhxue69uhkummnw3ezumt0d5pzps26tfjesmn6ksf5mm36hpf9fkjut49sfeutfutvs2phrykn25v9w093g5).
+Consider enabling [Lockdown Mode](https://nostr.at/nevent1qqsdzfkq87ux5utdq8zgcnexghnj5h27zn55j7d588vunp3rths09qszypsf7xrv5q3avkxqlcqe2uz89av4vhytu8wpvwc4g8avnkg25n5279vk3h3)
+or similar security features.
 
 ### Can OpenSats help me to set up an organization or foundation for my open-source project?
 
