--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -40,6 +40,11 @@ as in the internal and external processes of our organization.
 - [EOY Report: 2023](/blog/2023-year-in-review)
 - [EOY Report: 2024](/blog/2024-year-in-review)
 
+## Financial Statements
+
+- [2022/2023/2024](/public/docs/financials/Open Sats Initiative, Inc._Financial Statements 2022-2023-2024.pdf)
+- [2025](/public/docs/financials/Open Sats Initiative, Inc._Financial Statements 2025.pdf)
+
 ## Project Grants
 
 - [List of Bitcoin Grants](/tags/bitcoin/wave)
