--- a/data/pages/transparency.mdx
+++ b/data/pages/transparency.mdx
@@ -42,8 +42,8 @@ as in the internal and external processes of our organization.
 
 ## Financial Statements
 
-- [2022/2023/2024](/docs/financials/Financial_Statements_2022-2023-2024.pdf)
-- [2025](/docs/financials/Financial_Statements_2025.pdf)
+- [2022-2024](/docs/financials/2022-2024.pdf)
+- [2025](/docs/financials/2025.pdf)
 
 ## Project Grants
 
