--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -49,7 +49,7 @@ The nine initiatives highlighted in this impact report are:
 - [Fedimint](#fedimint)
 - [OpenCash](#opencash)
 
-The cumulative advancements of these projects  mark a shift from experimentation
+The cumulative advancement of these projects marks a shift from experimentation
 towards reliable infrastructure, showing that ecash is becoming a more
 dependable part of Bitcoin's payment landscape.
 
