--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -60,7 +60,7 @@ impact.
 
 ### Cashu
 
-Over the past year, Cashu developments focused on strengthening reliability,
+Over the past year, Cashu's developments focused on strengthening reliability,
 expanding interoperability, and supporting new use cases. With long-term
 [support](/blog/cashu-calle-receives-lts-grant) from OpenSats, Calle advanced
 new privacy-preserving standards, improved Lightning settlement, and introduced
