--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -1,5 +1,5 @@
 ---
-title: "Advancements in eCash"
+title: "Advancements in Ecash"
 date: '2025-09-24'
 tags: ['OpenSats', 'bitcoin', 'impact', 'ecash']
 authors: ['default', 'arvin', 'dergigi']
