--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -366,6 +366,37 @@ redeemed for bitcoin.
 
 With [support](/blog/twelfth-wave-of-bitcoin-grants#hashpool-and-axepool) from
 OpenSats, developments have focused on integrating ecash issuance directly into
+the [Stratum V2](https://stratumprotocol.org/) protocol.
+
+The cashu mining share payment method protocol has evolved significantly and is
+close to being PR-ready. Major improvements include rewriting the cdk branch
+(for the [fourth time!](https://github.com/vnprc/cdk/tree/hashpool5)) to conform to best practices within the cdk repo and [eliminating](https://github.com/vnprc/cdk/commit/c95fb868533e46eda029fe690fc66a805f3e7803) the need for a quote lookup API, which
+significantly increased the privacy and security attack surface of the protocol.
+Work on Hashpool has resulted in [a](https://github.com/cashubtc/cdk/commit/180a7c41b754f3b37d90e2cc92a5ba5f76b0b15e) [number](https://github.com/cashubtc/cdk/commit/714022fe140f3ed58bac9396ca6b7627dbbc59f9) [of](https://github.com/cashubtc/cdk/commit/5b30ca546d44d5bfe86f07e6091c989aa4953a2e) [merged](https://github.com/cashubtc/cdk/commit/951ff054fb61e20f99cbe6776354454c6a90a1bb) [commits](https://github.com/cashubtc/cdk/commit/853f13fc85001af710175489581d701a0667e24d) to the cdk project.
+
+The mint role was [refactored](https://github.com/vnprc/hashpool/commit/bc50f53535dddc4eea0bb0569bf1768ada862d9b) into a proper Sv2 role using all new [extension](https://stratumprotocol.org/specification/03-Protocol-Overview/#34-protocol-extensions) message types, and the hashpool repo was upgraded with [Nix
+Flakes](https://nix.dev/concepts/flakes.html), Bitcoin
+[regtest](https://developer.bitcoin.org/examples/testing.html) setups, and
+[command-line utilities](https://github.com/vnprc/hashpool/commit/28b682df9023babbce60be34ef0e612c58f3e65d) for
+testing wallet balances and redemption. Together, these changes make Hashpool
+easier to test and operate under real-world mining conditions.
+
+Hashpool developer vnprc also vibed with nostr builders at [Sovereign Engineering](https://sovereignengineering.io/) Cohort 5 resulting in a [published rust crate](https://crates.io/crates/bitcoin-nostr-relay) for transmitting bitcoin transactions via nostr,
+and experiments in ehash payment forwarding via nostr, nix build systems, and a slick new [user interface](https://x.com/btchashpool/status/1970850087719809311). These tools will
+be crucial to improving the Hashpool user experience and tooling after the
+core protocol is finalized.
+
+A related project called
+[Axepool](https://hashpool.dev/dev-logs/dev-log-2025-04-05/#axepool) applies the same design to small-scale miners,
+particularly those running [Bitaxe](/blog/bitcoin-grants-feb-2024#the-bitaxe) hardware. By issuing
+[eHash](https://hashpool.dev/articles/what-is-hashpool/#ehash) (ecash tokens
+backed by proof of work) directly for contributed hashpower, Axepool removes
+the need for miners to run a hosted service and enables direct ecash payouts, making it
+easier for everyday miners to receive frequent payouts. The Axepool design is
+still in the conceptual phase and undergoing rapid iteration. Together, Hashpool
+and Axepool demonstrate how ecash can replace traditional pool accounting
+with direct, accountless mining rewards that are private and transferable.
+OpenSats, developments have focused on integrating ecash issuance directly into
 the [Stratum V2](https://stratumprotocol.org/) protocol. The connection between
 pool and mint was rebuilt to use [asynchronous
 channels](https://github.com/vnprc/hashpool/commit/44f24d5), making payout flows
