Edit to remove "together"

--- a/data/blog/advancements-in-ecash.mdx
+++ b/data/blog/advancements-in-ecash.mdx
@@ -378,7 +378,7 @@ The mint role was [refactored](https://github.com/vnprc/hashpool/commit/bc50f535
 Flakes](https://nix.dev/concepts/flakes.html), Bitcoin
 [regtest](https://developer.bitcoin.org/examples/testing.html) setups, and
 [command-line utilities](https://github.com/vnprc/hashpool/commit/28b682df9023babbce60be34ef0e612c58f3e65d) for
-testing wallet balances and redemption. Together, these changes make Hashpool
+testing wallet balances and redemption. These changes make Hashpool
 easier to test and operate under real-world mining conditions.
 
 Hashpool developer vnprc also collaborated with nostr builders at [Sovereign Engineering](https://sovereignengineering.io/) Cohort 5 resulting in a [published rust crate](https://crates.io/crates/bitcoin-nostr-relay) for transmitting bitcoin transactions via nostr,
